--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,158 @@
-numpy==1.13.3
-matplotlib==2.1.0
+adium-theme-ubuntu==0.3.4
+alabaster==0.7.10
+astroid==1.5.2
+atari-py==0.1.1
+attrs==17.2.0
+autobahn==17.7.1
+Automat==0.6.0
+Babel==2.4.0
+backports-abc==0.5
+backports.functools-lru-cache==1.4
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
+backports.weakref==1.0.post1
+beautifulsoup4==4.4.1
+bleach==1.5.0
+ccsm==0.9.12.3
+certifi==2017.4.17
+cffi==1.11.2
+chardet==3.0.4
+compizconfig-python==0.9.12.3
+conda==4.3.16
+configparser==3.5.0
+constantly==15.1.0
+cvxopt==1.2.0
+cycler==0.10.0
+Cython==0.26
+decorator==4.0.11
+dlib==19.9.0
+docker-py==1.10.3
+docker-pycreds==0.2.1
+docutils==0.13.1
+doom-py==0.0.15
+entrypoints==0.2.2
+enum34==1.1.6
+face-recognition-models==0.3.0
+fastzbarlight==0.0.14
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.1.1
+go-vncdriver==0.4.19
+GPUtil==1.3.0
+graphviz==0.8
+gym==0.7.4
+h5py==2.7.0
+html5lib==0.9999999
+hyperlink==17.3.0
+idna==2.5
+imagesize==0.7.1
+imutils==0.4.5
+incremental==17.5.0
+ipaddress==1.0.18
+ipykernel==4.6.1
+ipython==5.3.0
+ipython-genutils==0.2.0
+isort==4.2.5
+jedi==0.10.2
+Jinja2==2.9.6
+joblib==0.11
+jsonschema==2.6.0
+jupyter-client==5.0.1
+jupyter-core==4.3.0
+Keras==2.1.3
+lazy-object-proxy==1.3.1
+leveldb==0.194
+lxml==3.5.0
+Markdown==2.6.9
+MarkupSafe==1.0
+matplotlib==2.0.2
+mccabe==0.6.1
+mistune==0.7.4
+mock==2.0.0
+nbconvert==5.2.1
+nbformat==4.3.0
+networkx==1.11
+nose==1.3.7
+numpy==1.14.0
+numpydoc==0.6.0
+olefile==0.44
+pandas==0.20.3
+pandocfilters==1.4.1
+pathlib2==2.2.1
+pbr==3.1.1
+pep8==1.7.0
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==4.2.1
+ppaquette-gym-doom==0.0.3
+prompt-toolkit==1.0.14
+protobuf==3.5.0
+psutil==5.2.2
+ptyprocess==0.5.1
+pybullet==1.7.3
+pycocotools==2.0
+pycosat==0.6.1
+pycparser==2.18
+pycurl==7.43.0
+pydot==1.2.3
+pyflakes==1.5.0
+pygame==1.9.3
+pyglet==1.2.4
+Pygments==2.2.0
+pygobject==3.20.0
+pygpgme==0.3
+pylint==1.7.1
+PyOpenGL==3.1.0
+pyparsing==2.2.0
+Pyste==0.9.10
+python-apt==1.1.0b1+ubuntu0.16.4.1
+python-dateutil==1.5
+python-gflags==3.1.1
+pytz==2017.2
+PyWavelets==0.5.2
+PyYAML==3.12
+pyzmq==16.0.2
+QtAwesome==0.4.4
+qtconsole==4.3.0
+QtPy==1.2.1
+requests==2.10.0
+rope==0.10.5
+ruamel.ordereddict==0.4.9
+ruamel.yaml==0.14.12
+scandir==1.5
+scikit-image==0.13.0
+scikit-learn==0.18.1
+scipy==1.0.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.11.0
-torch==0.4.0a0+7605d19
-Pillow==5.1.0
-torchvision==0.2.1
+snowballstemmer==1.2.1
+Sphinx==1.6.1
+sphinxcontrib-websupport==1.0.1
+spyder==3.1.4
+stevedore==1.21.0
+subprocess32==3.2.7
+tensorflow==1.4.0
+tensorflow-tensorboard==0.4.0rc3
+testpath==0.3.1
+Theano==0.9.0
+tornado==4.5.1
+traitlets==4.3.2
+Twisted==17.5.0
+txaio==2.8.1
+typing==3.6.1
+ujson==1.35
+unity-lens-photos==1.0
+universe==0.21.3
+urllib3==1.21.1
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+wcwidth==0.1.7
+webencodings==0.5.1
+websocket-client==0.44.0
+Werkzeug==0.12.2
+wrapt==1.10.10
+youtube-dl==2016.2.22
+zmq==0.0.0
+zope.interface==4.4.2
